tests/syntax/oracle/cert_msc_38.0.res.oracle
[kernel] Parsing cert_msc_38.c (with preprocessing)
[kernel:CERT:MSC:38] cert_msc_38.c:26: Warning: 
  assert is a standard macro. Its definition cannot be suppressed, see CERT C coding rules MSC38-C
[kernel] cert_msc_38.c:26: User Error: 
  Cannot resolve variable assert
  24    void func(int e) {
  25      // error: assert must be a macro, not a function
  26      execute_handler(&(assert), e < 0);
                            ^^^^^^
  27    }
  28
[kernel] Frama-C aborted: invalid user input.
